test/externaldata/dummy-provider/policy/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: ApprovalsValidator
metadata:
  name: symphony
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps","solution.symphony"]
        kinds: ["Deployment", "SolutionContainer"]
