test/externaldata/dummy-provider/policy/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: approvalsvalidator
spec:
  crd:
    spec:
      names:
        kind: ApprovalsValidator
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sexternaldata

        violation[{"msg": msg}] {
          # build a list of keys containing images
          # images := [img | img = input.review.object.spec.template.spec.containers[_].image]

          # send external data request
          kk := sprintf("%v", [input])
          # k1 := sprintf("%v, %v", [kk, kk])
          # k2 := sprintf("%v, %v", [k1, k1])
          # k3 := sprintf("%v, %v", [k2, k2])
          # k4 := sprintf("%v, %v", [k3, k3])
          # k5 := sprintf("%v, %v", [k4, k4])
          # k6 := sprintf("%v, %v", [k5, k5])
          # k7 := sprintf("%v, %v", [k6, k6])
          # k8 := sprintf("%v, %v", [k7, k7])
          # k9 := sprintf("%v, %v", [k8, k8])
          # k10 := sprintf("%v, %v", [k9, k9])
          
          response := external_data({
            "provider": "approvals-provider",
            "keys": [kk]
          })

          response_with_error(response)

          # Only show errors from the response, not the entire response
          errors := [err | err := response.errors[_]]
          system_errors := [err | err := response.system_error[_]]
          all_errors := array.concat(errors, system_errors)
          msg := sprintf("Validation errors: %v", [all_errors])
        }

        response_with_error(response) {
          count(response.errors) > 0
          # errs := response.errors[_]
          # contains(errs[1], "_invalid")
        }

        response_with_error(response) {
          count(response.system_error) > 0
        }
